# zlp-cli

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/add-command/: SKILL.md
.claude/skills/dev-check/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-04-26-zulip-make-commands-design.md
scripts/: format.py  sync_daemon.py  zlp.py
src/zlp/: __init__.py  cli.py  format.py  sync.py
tests/: test_cli.py  test_format.py  test_makefile.py  test_sync.py
tests/fixtures/: sample_message.json
